--- a/index.html
+++ b/index.html
@@ -81,10 +81,12 @@
 					Monced <br />
 					Dresses
 				</h1>
-				<h2 class="header-subtitle">Designed to flow with your elegance.</h2>
+				<h2 class="header-subtitle">
+					Veniam aspernatur praesentium recusandae.
+				</h2>
 
 				<div class="cta-section">
-					<a href="#"><button class="btn">see products</button></a>
+					<a href="#"><button class="btn">ver productos</button></a>
 				</div>
 			</div>
 		</header>
@@ -108,14 +110,15 @@
 				</div>
 			</div>
 		</div>
+
 		<div class="body-content">
 			<section id="why-us" class="why-us">
-				<h1 class="section-title fade-in">why Monced Dresses?</h1>
+				<h1 class="section-title fade-in">¿por qué Monced?</h1>
 				<h3 class="section-subtitle fade-in">
-					Designed to flow with your elegance.
+					Lorem ipsum dolor sit amet consectetur
 				</h3>
 				<div class="why-us-container">
-					<div class="reason zoom-up">
+					<div class="reason zoom-in">
 						<div class="card-content">
 							<img src="./assets/icons/sparkle.svg" class="reason-icon" />
 							<h3>Effortless Elegance</h3>
@@ -125,7 +128,7 @@
 							</p>
 						</div>
 					</div>
-					<div class="reason zoom-up">
+					<div class="reason zoom-in">
 						<div class="card-content">
 							<img src="./assets/icons/diamond.svg" class="reason-icon" />
 							<h3>Premium Quality</h3>
@@ -135,7 +138,7 @@
 							</p>
 						</div>
 					</div>
-					<div class="reason zoom-up">
+					<div class="reason zoom-in">
 						<div class="card-content">
 							<img src="./assets/icons/truck.svg" class="reason-icon" />
 							<h3>Secure Shipping</h3>
@@ -155,7 +158,7 @@
 						src="./assets/dresses/featured.png"
 					/>
 					<div class="about-us-text">
-						<h1 class="section-title blur-out">about me</h1>
+						<h1 class="section-title blur-out">sobre mí</h1>
 						<h2 class="section-subtitle blur-out">Lorem ipsum dolor sit</h2>
 						<p class="blur-out">
 							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam
@@ -163,7 +166,7 @@
 							voluptatum dolorem blanditiis nobis culpa facere amet vitae beatae
 							corrupti quibusdam? Necessitatibus, voluptates nisi?
 						</p>
-						<button class="ghost-btn blur-out">more details</button>
+						<button class="ghost-btn blur-out">más detalles</button>
 					</div>
 				</div>
 			</section>
@@ -243,9 +246,63 @@
 				</div>
 			</section>
 
+			<section id="features" class="featutes">
+				<h2 class="section-title fade-in">Detalles que importan</h2>
+				<p class="section-subtitle fade-in">
+					Cada prenda con atención a lo esencial
+				</p>
+
+				<div class="features-container">
+					<div class="features-column">
+						<div class="feature-item zoom-in">
+							<img
+								src="./assets/icons/coat-hanger-duotone.svg"
+								class="feature-icon"
+							/>
+							<h3 class="feature-title">Tu vestido, a tu medida</h3>
+							<p class="feature-text">
+								Cada pieza se adapta a ti. Nuestros vestidos están disponibles
+								en todas las tallas y pueden ser encargados según tus medidas
+								exactas.
+							</p>
+						</div>
+						<div class="feature-item zoom-in">
+							<img
+								src="./assets/icons/recycle-duotone.svg"
+								class="feature-icon"
+							/>
+							<h3 class="feature-title">Materiales con historia</h3>
+							<p class="feature-text">
+								Confeccionamos a partir de tejidos reciclados seleccionados a
+								mano, provenientes de otras prendas que merecen una segunda
+								vida.
+							</p>
+						</div>
+					</div>
+					<div class="features-column">
+						<div class="feature-item zoom-in">
+							<img src="./assets/icons/leaf-duotone.svg" class="feature-icon" />
+							<h3 class="feature-title">Texturas que enamoran</h3>
+							<p class="feature-text">
+								Usamos telas suaves al tacto como satén, lino reciclado y
+								mezclas con seda regenerada. Ligereza y brillo sutil.
+							</p>
+						</div>
+						<div class="feature-item zoom-in">
+							<img src="./assets/icons/yarn-duotone.svg" class="feature-icon" />
+							<h3 class="feature-title">Diseño artesanal</h3>
+							<p class="feature-text">
+								Cada prenda es cortada y confeccionada de manera semi-artesanal.
+								Atención al más mínimo detalle.
+							</p>
+						</div>
+					</div>
+				</div>
+			</section>
+
 			<section id="shop-preview" class="shop-preview">
-				<h1 class="section-title">fall in love with your reflection</h1>
-				<h2 class="section-subtitle">Designed to make you feel confident.</h2>
+				<h1 class="section-title">Lorem ipsum dolor</h1>
+				<h2 class="section-subtitle">Officiis tempora repudiandae possimus</h2>
 
 				<div class="shop-preview-container">
 					<div class="product-card-container rotate-in">
@@ -280,7 +337,7 @@
 					</div>
 				</div>
 				<a href="" class="fade-in"
-					><button class="btn">explore the shop</button></a
+					><button class="btn">explora la tienda</button></a
 				>
 			</section>
 		</div>
