--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
 	</head>
 	<body id="body">
 		<nav class="nav">
-			<a href="./index.html" class="nav-icon-wrapper">
-				<img src="./assets/icons/logo-name-color.png" class="nav-icon" />
+			<a href="./index.html" class="nav-icon-wrapper desktop-hide">
+				<img
+					src="./assets/icons/logo-name-color.png"
+					class="nav-icon desktop-hide"
+				/>
 			</a>
 			<button id="toggle-btn" class="toggle-btn">
 				<span class="bar"></span>
@@ -78,7 +81,8 @@
 		<header id="home" class="header blur-out">
 			<div class="header-content show-up-blur">
 				<h1 class="header-title">
-					Monced <br />
+					Monced
+					<br />
 					Dresses
 				</h1>
 				<h2 class="header-subtitle">
@@ -91,7 +95,7 @@
 			</div>
 		</header>
 
-		<div class="slider" style="--width: 200px; --height: 50px; --quantity: 5">
+		<div class="slider" style="--width: 250px; --height: 50px; --quantity: 5">
 			<div class="list">
 				<div class="item" style="--position: 1">
 					<h1>Handmade</h1>
