--- a/index.html
+++ b/index.html
@@ -170,7 +170,11 @@
 							voluptatum dolorem blanditiis nobis culpa facere amet vitae beatae
 							corrupti quibusdam? Necessitatibus, voluptates nisi?
 						</p>
-						<button class="ghost-btn blur-out">más detalles</button>
+						<!-- <button class="ghost-btn blur-out">más detalles</button> -->
+						<a class="social blur-out" href="#">
+							<img src="./assets/icons/instagram-logo-fill.svg" />
+							<p>@mely_monced</p>
+						</a>
 					</div>
 				</div>
 			</section>
@@ -316,7 +320,6 @@
 								alt=""
 								class="preview-card-img"
 							/>
-							<h3 class="product-card-title">Lorem ipsum dolor</h3>
 						</a>
 					</div>
 					<div class="product-card-container rotate-in">
@@ -326,7 +329,6 @@
 								alt=""
 								class="preview-card-img"
 							/>
-							<h3 class="product-card-title">Lorem ipsum dolor</h3>
 						</a>
 					</div>
 					<div class="product-card-container rotate-in">
@@ -336,7 +338,6 @@
 								alt=""
 								class="preview-card-img"
 							/>
-							<h3 class="product-card-title">Lorem ipsum dolor</h3>
 						</a>
 					</div>
 				</div>
