--- a/index.html
+++ b/index.html
@@ -124,7 +124,6 @@
 				<div class="why-us-container">
 					<div class="reason zoom-in">
 						<div class="card-content">
-							<img src="./assets/icons/sparkle.svg" class="reason-icon" />
 							<h3>Effortless Elegance</h3>
 							<p>
 								Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -134,7 +133,6 @@
 					</div>
 					<div class="reason zoom-in">
 						<div class="card-content">
-							<img src="./assets/icons/diamond.svg" class="reason-icon" />
 							<h3>Premium Quality</h3>
 							<p>
 								Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -144,8 +142,7 @@
 					</div>
 					<div class="reason zoom-in">
 						<div class="card-content">
-							<img src="./assets/icons/truck.svg" class="reason-icon" />
-							<h3>Secure Shipping</h3>
+							<h3>Second Life</h3>
 							<p>
 								Lorem ipsum dolor sit, amet consectetur adipisicing elit.
 								Corporis voluptates debitis vitae nostrum tempora neque.
@@ -181,75 +178,107 @@
 
 			<section class="image-gallery">
 				<div class="image-gallery-container">
-					<div class="image-gallery-item">
-						<img
-							src="./assets/dresses/preview_1.png"
-							alt="Imagen 1"
-							class="fade-in"
-						/>
+					<!-- Fila 1 -->
+					<div class="image-gallery-row">
+						<div class="image-gallery-item">
+							<img src="./assets/dresses/preview_1.png" alt="Imagen 1" />
+						</div>
+						<div class="image-gallery-item">
+							<img src="./assets/dresses/preview_2.png" alt="Imagen 2" />
+						</div>
+						<div class="image-gallery-item">
+							<img src="./assets/dresses/preview_3.png" alt="Imagen 3" />
+						</div>
+						<div class="image-gallery-item">
+							<img src="./assets/dresses/preview_4.png" alt="Imagen 4" />
+						</div>
+						<div class="image-gallery-item">
+							<img src="./assets/dresses/preview_5.png" alt="Imagen 5" />
+						</div>
+						<!-- Duplicado selectivo para bucle -->
+						<div class="image-gallery-item">
+							<img src="./assets/dresses/preview_1.png" alt="Imagen 1" />
+						</div>
+						<div class="image-gallery-item">
+							<img src="./assets/dresses/preview_2.png" alt="Imagen 2" />
+						</div>
+						<div class="image-gallery-item">
+							<img src="./assets/dresses/preview_3.png" alt="Imagen 3" />
+						</div>
+						<div class="image-gallery-item">
+							<img src="./assets/dresses/preview_4.png" alt="Imagen 4" />
+						</div>
+						<div class="image-gallery-item">
+							<img src="./assets/dresses/preview_5.png" alt="Imagen 5" />
+						</div>
 					</div>
-					<div class="image-gallery-item">
-						<img
-							src="./assets/dresses/preview_2.png"
-							alt="Imagen 2"
-							class="fade-in"
-						/>
+					<!-- Fila 2 -->
+					<div class="image-gallery-row">
+						<div class="image-gallery-item">
+							<img src="./assets/dresses/preview_6.png" alt="Imagen 6" />
+						</div>
+						<div class="image-gallery-item">
+							<img src="./assets/dresses/preview_7.png" alt="Imagen 7" />
+						</div>
+						<div class="image-gallery-item">
+							<img src="./assets/dresses/preview_8.png" alt="Imagen 8" />
+						</div>
+						<div class="image-gallery-item">
+							<img src="./assets/dresses/preview_9.png" alt="Imagen 9" />
+						</div>
+						<div class="image-gallery-item">
+							<img src="./assets/dresses/preview_10.png" alt="Imagen 10" />
+						</div>
+						<!-- Duplicado selectivo para bucle -->
+						<div class="image-gallery-item">
+							<img src="./assets/dresses/preview_6.png" alt="Imagen 6" />
+						</div>
+						<div class="image-gallery-item">
+							<img src="./assets/dresses/preview_7.png" alt="Imagen 7" />
+						</div>
+						<div class="image-gallery-item">
+							<img src="./assets/dresses/preview_8.png" alt="Imagen 8" />
+						</div>
+						<div class="image-gallery-item">
+							<img src="./assets/dresses/preview_9.png" alt="Imagen 9" />
+						</div>
+						<div class="image-gallery-item">
+							<img src="./assets/dresses/preview_10.png" alt="Imagen 10" />
+						</div>
 					</div>
-					<div class="image-gallery-item">
-						<img
-							src="./assets/dresses/preview_3.png"
-							alt="Imagen 3"
-							class="fade-in"
-						/>
-					</div>
-					<div class="image-gallery-item">
-						<img
-							src="./assets/dresses/preview_4.png"
-							alt="Imagen 4"
-							class="fade-in"
-						/>
-					</div>
-					<div class="image-gallery-item">
-						<img
-							src="./assets/dresses/preview_5.png"
-							alt="Imagen 5"
-							class="fade-in"
-						/>
-					</div>
-					<div class="image-gallery-item">
-						<img
-							src="./assets/dresses/preview_6.png"
-							alt="Imagen 6"
-							class="fade-in"
-						/>
-					</div>
-					<div class="image-gallery-item">
-						<img
-							src="./assets/dresses/preview_7.png"
-							alt="Imagen 7"
-							class="fade-in"
-						/>
-					</div>
-					<div class="image-gallery-item">
-						<img
-							src="./assets/dresses/preview_8.png"
-							alt="Imagen 8"
-							class="fade-in"
-						/>
-					</div>
-					<div class="image-gallery-item">
-						<img
-							src="./assets/dresses/preview_9.png"
-							alt="Imagen 9"
-							class="fade-in"
-						/>
-					</div>
-					<div class="image-gallery-item mobile-hide">
-						<img
-							src="./assets/dresses/preview_10.png"
-							alt="Imagen 10"
-							class="fade-in"
-						/>
+					<!-- Fila 3 -->
+					<div class="image-gallery-row">
+						<div class="image-gallery-item">
+							<img src="./assets/dresses/preview_3.png" alt="Imagen 3" />
+						</div>
+						<div class="image-gallery-item">
+							<img src="./assets/dresses/preview_4.png" alt="Imagen 4" />
+						</div>
+						<div class="image-gallery-item">
+							<img src="./assets/dresses/preview_5.png" alt="Imagen 5" />
+						</div>
+						<div class="image-gallery-item">
+							<img src="./assets/dresses/preview_6.png" alt="Imagen 6" />
+						</div>
+						<div class="image-gallery-item">
+							<img src="./assets/dresses/preview_7.png" alt="Imagen 7" />
+						</div>
+						<!-- Duplicado selectivo para bucle -->
+						<div class="image-gallery-item">
+							<img src="./assets/dresses/preview_3.png" alt="Imagen 3" />
+						</div>
+						<div class="image-gallery-item">
+							<img src="./assets/dresses/preview_4.png" alt="Imagen 4" />
+						</div>
+						<div class="image-gallery-item">
+							<img src="./assets/dresses/preview_5.png" alt="Imagen 5" />
+						</div>
+						<div class="image-gallery-item">
+							<img src="./assets/dresses/preview_6.png" alt="Imagen 6" />
+						</div>
+						<div class="image-gallery-item">
+							<img src="./assets/dresses/preview_7.png" alt="Imagen 7" />
+						</div>
 					</div>
 				</div>
 			</section>
