--- a/index.html
+++ b/index.html
@@ -349,6 +349,10 @@
 								alt=""
 								class="preview-card-img"
 							/>
+							<div class="card-info">
+								<p class="price"><span class="bold">Precio:</span> $600.00</p>
+								<p class="price"><span class="bold">Talla:</span> S</p>
+							</div>
 						</a>
 					</div>
 					<div class="product-card-container rotate-in">
@@ -358,6 +362,10 @@
 								alt=""
 								class="preview-card-img"
 							/>
+							<div class="card-info">
+								<p class="price"><span class="bold">Precio:</span> $700.00</p>
+								<p class="price"><span class="bold">Talla:</span> M</p>
+							</div>
 						</a>
 					</div>
 					<div class="product-card-container rotate-in">
@@ -367,6 +375,10 @@
 								alt=""
 								class="preview-card-img"
 							/>
+							<div class="card-info">
+								<p class="price"><span class="bold">Precio:</span> $800.00</p>
+								<p class="price"><span class="bold">Talla:</span> L</p>
+							</div>
 						</a>
 					</div>
 				</div>
@@ -378,25 +390,52 @@
 
 		<footer class="footer">
 			<div class="footer-content">
-				<img class="nav-icon" src="./assets/icons/logo-name-white.png" />
-				<p>© 2025 All rights reserved.</p>
-				<div class="social-media">
-					<a href="#"
-						><img
-							src="./assets/icons/facebook-logo-fill.svg"
-							class="social-link"
-							alt="Facebook"
-					/></a>
-					<a href="#"
-						><img
-							src="./assets/icons/instagram-logo-fill.svg"
-							class="social-link"
-							alt="Instagram"
-					/></a>
+				<div class="footer-column">
+					<img class="footer-logo" src="./assets/icons/logo-name-white.png" />
+					<p class="footer-description">
+						Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio,
+						ducimus dolore quae nesciunt magni assumenda qui.
+					</p>
+					<p class="copyright">© 2025 All rights reserved.</p>
 				</div>
-				<p class="bold">
-					Developed by <a href="https://cesarsullen.github.io">Saru</a>.
-				</p>
+				<div class="footer-column">
+					<h3>Explorar</h3>
+					<ul class="footer-links">
+						<li><a href="./index.html">Inicio</a></li>
+						<li><a href="./index.html">Sobre mí</a></li>
+						<li><a href="./index.html">Vestidos</a></li>
+						<li><a href="./index.html">Tops</a></li>
+					</ul>
+				</div>
+				<div class="footer-column">
+					<h3>Contáctame</h3>
+					<div class="social-media">
+						<a href="https://facebook.com" target="_blank">
+							<img
+								src="./assets/icons/facebook-logo-fill.svg"
+								class="social-link"
+								alt="Facebook"
+							/>
+						</a>
+						<a href="https://instagram.com" target="_blank">
+							<img
+								src="./assets/icons/instagram-logo-fill.svg"
+								class="social-link"
+								alt="Instagram"
+							/>
+						</a>
+					</div>
+					<p class="contact-info">
+						Email: <a href="mailto:">example@synthocean.com</a><br />
+						Móvil: <a href="tel:+1234567890">+53 (564) 567-89</a>
+					</p>
+				</div>
+				<div class="footer-bottom">
+					<p class="bold">
+						Powered by
+						<a href="https://SynthOcean.com" target="_blank">SynthOcean</a>.
+					</p>
+				</div>
 			</div>
 		</footer>
 		<script src="js/main.js"></script>
