--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 						Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio,
 						ducimus dolore quae nesciunt magni assumenda qui.
 					</p>
-					<p class="copyright">© 2025 All rights reserved.</p>
+					<p class="copyright mobile-hide">© 2025 All rights reserved.</p>
 				</div>
 				<div class="footer-column">
 					<h3>Explorar</h3>
@@ -431,6 +431,8 @@
 					</p>
 				</div>
 				<div class="footer-bottom">
+					<p class="copyright desktop-hide">© 2025 All rights reserved.</p>
+
 					<p class="bold">
 						Powered by
 						<a href="https://SynthOcean.com" target="_blank">SynthOcean</a>.
