--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
 				<div class="side-bar-social">
 					<a href="#">
 						<img
-							src="./assets/icons/facebook-logo-fill.svg"
+							src="./assets/icons/facebook-logo-fill-pink.svg"
 							class="social-link"
 							alt="Facebook"
 						/>
 					</a>
 					<a href="#">
 						<img
-							src="./assets/icons/instagram-logo-fill.svg"
+							src="./assets/icons/instagram-logo-fill-pink.svg"
 							class="social-link"
 							alt="Instagram"
 						/>
@@ -393,7 +393,7 @@
 						Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio,
 						ducimus dolore quae nesciunt magni assumenda qui.
 					</p>
-					<p class="copyright mobile-hide">© 2025 All rights reserved.</p>
+					<p class="mobile-hide copyright">© 2025 All rights reserved.</p>
 				</div>
 				<div class="footer-column">
 					<h3>Explorar</h3>
@@ -428,12 +428,12 @@
 					</p>
 				</div>
 				<div class="footer-bottom">
-					<p class="copyright desktop-hide">© 2025 All rights reserved.</p>
+					<p class="desktop-hide copyright">© 2025 All rights reserved.</p>
 
-					<p class="bold">
-						Powered by
-						<a href="https://SynthOcean.com" target="_blank">SynthOcean</a>.
-					</p>
+					<a href="https://SynthOcean.com" target="_blank">
+						<p>Powered by <span class="bold">SynthOcean</span>.</p>
+						<img src="./assets/icons/so-white-color.svg" class="so-logo"
+					/></a>
 				</div>
 			</div>
 		</footer>
