--- a/index.html
+++ b/index.html
@@ -149,30 +149,6 @@
 				</div>
 			</section>
 
-			<section id="about-us" class="about-us">
-				<div class="about-us-container two-columns">
-					<img
-						class="about-us-img fade-in"
-						src="./assets/dresses/featured.png"
-					/>
-					<div class="about-us-text">
-						<h1 class="section-title blur-out">sobre mí</h1>
-						<h2 class="section-subtitle blur-out">Lorem ipsum dolor sit</h2>
-						<p class="blur-out">
-							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam
-							cupiditate tempora pariatur, delectus vel voluptate debitis
-							voluptatum dolorem blanditiis nobis culpa facere amet vitae beatae
-							corrupti quibusdam? Necessitatibus, voluptates nisi?
-						</p>
-						<!-- <button class="ghost-btn blur-out">más detalles</button> -->
-						<a class="social blur-out" href="#">
-							<img src="./assets/icons/instagram-logo-fill.svg" />
-							<p>@mely_monced</p>
-						</a>
-					</div>
-				</div>
-			</section>
-
 			<section class="image-gallery">
 				<div class="image-gallery-container">
 					<!-- Fila 1 -->
@@ -383,6 +359,35 @@
 					><button class="btn">explora la tienda</button></a
 				>
 			</section>
+
+			<section id="about-us" class="about-us">
+				<div class="about-us-container two-columns">
+					<img
+						class="about-us-img fade-in"
+						src="./assets/dresses/featured.png"
+					/>
+					<div class="about-us-text">
+						<h1 class="section-title blur-out">sobre mí</h1>
+						<h2 class="section-subtitle blur-out">Lorem ipsum dolor sit</h2>
+						<p class="blur-out">
+							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam
+							cupiditate tempora pariatur, delectus vel voluptate debitis
+							voluptatum dolorem blanditiis nobis culpa facere amet vitae beatae
+							corrupti quibusdam? Necessitatibus, voluptates nisi?
+						</p>
+						<div class="about-links">
+							<a class="social blur-out" href="#">
+								<img src="./assets/icons/instagram-logo-fill.svg" />
+								<p>Instagram</p>
+							</a>
+							<a class="social blur-out" href="#">
+								<img src="./assets/icons/facebook-logo-fill.svg" />
+								<p>Facebook</p>
+							</a>
+						</div>
+					</div>
+				</div>
+			</section>
 		</div>
 
 		<footer class="footer">
@@ -393,7 +398,6 @@
 						Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio,
 						ducimus dolore quae nesciunt magni assumenda qui.
 					</p>
-					<p class="mobile-hide copyright">© 2025 All rights reserved.</p>
 				</div>
 				<div class="footer-column">
 					<h3>Explorar</h3>
@@ -409,14 +413,14 @@
 					<div class="social-media">
 						<a href="https://facebook.com" target="_blank">
 							<img
-								src="./assets/icons/facebook-logo-fill.svg"
+								src="./assets/icons/facebook-svgrepo-com.svg"
 								class="social-link"
 								alt="Facebook"
 							/>
 						</a>
 						<a href="https://instagram.com" target="_blank">
 							<img
-								src="./assets/icons/instagram-logo-fill.svg"
+								src="./assets/icons/instagram-svgrepo-com.svg"
 								class="social-link"
 								alt="Instagram"
 							/>
@@ -428,12 +432,12 @@
 					</p>
 				</div>
 				<div class="footer-bottom">
-					<p class="desktop-hide copyright">© 2025 All rights reserved.</p>
-
 					<a href="https://SynthOcean.com" target="_blank">
 						<p>Powered by <span class="bold">SynthOcean</span>.</p>
 						<img src="./assets/icons/so-white-color.svg" class="so-logo"
 					/></a>
+
+					<p class="copyright">© 2025 All rights reserved.</p>
 				</div>
 			</div>
 		</footer>
