--- a/index.html
+++ b/index.html
@@ -31,31 +31,31 @@
 			</button>
 			<ul class="nav-links">
 				<li>
-					<a href="#home" class="nav-link"><p>home</p></a>
+					<a href="#home" class="nav-link"><p>Inicio</p></a>
 				</li>
 				<li>
-					<a href="#dresses" class="nav-link"><p>dresses</p></a>
+					<a href="#dresses" class="nav-link"><p>Sobre mí</p></a>
 				</li>
 				<li>
-					<a href="#tops" class="nav-link"><p>tops</p></a>
+					<a href="#tops" class="nav-link"><p>Vestidos</p></a>
 				</li>
 				<li>
-					<a href="#bottoms" class="nav-link"><p>bottoms</p></a>
+					<a href="#bottoms" class="nav-link"><p>Tops</p></a>
 				</li>
 			</ul>
 			<div id="side-bar" class="side-bar">
 				<ul class="side-bar-links">
 					<li>
-						<a href="#home" class="side-bar-link"><p>home</p></a>
+						<a href="#home" class="side-bar-link"><p>Inicio</p></a>
 					</li>
 					<li>
-						<a href="#dresses" class="side-bar-link"><p>dresses</p></a>
+						<a href="#dresses" class="side-bar-link"><p>Sobre mí</p></a>
 					</li>
 					<li>
-						<a href="#tops" class="side-bar-link"><p>tops</p></a>
+						<a href="#tops" class="side-bar-link"><p>Vestidos</p></a>
 					</li>
 					<li>
-						<a href="#bottoms" class="side-bar-link"><p>bottoms</p></a>
+						<a href="#bottoms" class="side-bar-link"><p>Tops</p></a>
 					</li>
 				</ul>
 				<hr />
@@ -117,7 +117,7 @@
 
 		<div class="body-content">
 			<section id="why-us" class="why-us">
-				<h1 class="section-title fade-in">¿por qué Monced?</h1>
+				<h1 class="section-title fade-in">¿Por qué Monced?</h1>
 				<div class="why-us-container">
 					<div class="reason zoom-in">
 						<div class="card-content">
@@ -367,8 +367,7 @@
 						src="./assets/dresses/featured.png"
 					/>
 					<div class="about-us-text">
-						<h1 class="section-title blur-out">sobre mí</h1>
-						<h2 class="section-subtitle blur-out">Lorem ipsum dolor sit</h2>
+						<h1 class="section-title blur-out">Sobre mí</h1>
 						<p class="blur-out">
 							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam
 							cupiditate tempora pariatur, delectus vel voluptate debitis
