--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 			<section id="why-us" class="why-us">
 				<h1 class="section-title fade-in">¿Por qué Monced?</h1>
 				<div class="why-us-container">
-					<div class="reason zoom-in">
+					<div class="reason">
 						<div class="card-content">
 							<h3>Effortless Elegance</h3>
 							<p>
@@ -128,7 +128,7 @@
 							</p>
 						</div>
 					</div>
-					<div class="reason zoom-in">
+					<div class="reason">
 						<div class="card-content">
 							<h3>Premium Quality</h3>
 							<p>
@@ -137,7 +137,7 @@
 							</p>
 						</div>
 					</div>
-					<div class="reason zoom-in">
+					<div class="reason">
 						<div class="card-content">
 							<h3>Second Life</h3>
 							<p>
