--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 			<section id="why-us" class="why-us">
 				<h1 class="section-title fade-in">¿Por qué Monced?</h1>
 				<div class="why-us-container">
-					<div class="reason">
+					<div class="reason elegance-card">
 						<div class="card-content">
 							<h3>Effortless Elegance</h3>
 							<p>
@@ -128,7 +128,7 @@
 							</p>
 						</div>
 					</div>
-					<div class="reason">
+					<div class="reason quality-card">
 						<div class="card-content">
 							<h3>Premium Quality</h3>
 							<p>
@@ -137,7 +137,7 @@
 							</p>
 						</div>
 					</div>
-					<div class="reason">
+					<div class="reason second-life-card">
 						<div class="card-content">
 							<h3>Second Life</h3>
 							<p>
@@ -318,7 +318,7 @@
 					<div class="product-card-container rotate-in">
 						<a href="#" class="product-card">
 							<img
-								src="./assets/dresses/card_1.png"
+								src="./assets/dresses/product_1.png"
 								alt=""
 								class="preview-card-img"
 							/>
@@ -331,7 +331,7 @@
 					<div class="product-card-container rotate-in">
 						<a href="#" class="product-card">
 							<img
-								src="./assets/dresses/card_2.png"
+								src="./assets/dresses/product_2.png"
 								alt=""
 								class="preview-card-img"
 							/>
@@ -344,7 +344,7 @@
 					<div class="product-card-container rotate-in">
 						<a href="#" class="product-card">
 							<img
-								src="./assets/dresses/card_3.png"
+								src="./assets/dresses/product_3.png"
 								alt=""
 								class="preview-card-img"
 							/>
