--- a/index.html
+++ b/index.html
@@ -121,28 +121,28 @@
 				<div class="why-us-container">
 					<div class="reason elegance-card">
 						<div class="card-content">
-							<h3>Effortless Elegance</h3>
+							<h3>Elegancia</h3>
 							<p>
-								Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-								Corporis voluptates debitis vitae nostrum tempora neque.
+								Un diseño pensado para destacar de manera natural, combinando
+								sencillez y estilo en cada detalle.
 							</p>
 						</div>
 					</div>
 					<div class="reason quality-card">
 						<div class="card-content">
-							<h3>Premium Quality</h3>
+							<h3>Calidad premium</h3>
 							<p>
-								Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-								Corporis voluptates debitis vitae nostrum tempora neque.
+								Materiales duraderos y acabados cuidados para ofrecerte una
+								experiencia única y confiable.
 							</p>
 						</div>
 					</div>
 					<div class="reason second-life-card">
 						<div class="card-content">
-							<h3>Second Life</h3>
+							<h3>Segunda vida</h3>
 							<p>
-								Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-								Corporis voluptates debitis vitae nostrum tempora neque.
+								Un compromiso con la sostenibilidad, transformando materiales en
+								nuevas oportunidades.
 							</p>
 						</div>
 					</div>
