Updated UI (error page)

--- a/error.html
+++ b/error.html
@@ -18,7 +18,7 @@
 	</head>
 	<body id="body">
 		<div class="error-container">
-			<!-- <img src="./assets/error-image.png" class="error-image floating" /> -->
+			<img src="./assets/error-bg.png" class="error-image" />
 			<div class="error-info">
 				<h1 class="error-code">402</h1>
 				<h2 class="error-title">Lorem ipsum</h2>
