--- a/gallery.html
+++ b/gallery.html
@@ -17,6 +17,67 @@
 		<title>Galería de Vestidos - Monced Dresses</title>
 	</head>
 	<body id="body">
+		<nav class="nav">
+			<a href="./index.html" class="nav-icon-wrapper desktop-hide">
+				<img
+					src="./assets/icons/logo-name-color.png"
+					class="nav-icon desktop-hide"
+				/>
+			</a>
+			<button id="toggle-btn" class="toggle-btn">
+				<span class="bar"></span>
+				<span class="bar"></span>
+				<span class="bar"></span>
+			</button>
+			<ul class="nav-links">
+				<li>
+					<a href="#home" class="nav-link"><p>Inicio</p></a>
+				</li>
+				<li>
+					<a href="#dresses" class="nav-link"><p>Sobre mí</p></a>
+				</li>
+				<li>
+					<a href="#tops" class="nav-link"><p>Vestidos</p></a>
+				</li>
+				<li>
+					<a href="#bottoms" class="nav-link"><p>Tops</p></a>
+				</li>
+			</ul>
+			<div id="side-bar" class="side-bar">
+				<ul class="side-bar-links">
+					<li>
+						<a href="#home" class="side-bar-link"><p>Inicio</p></a>
+					</li>
+					<li>
+						<a href="#dresses" class="side-bar-link"><p>Sobre mí</p></a>
+					</li>
+					<li>
+						<a href="#tops" class="side-bar-link"><p>Vestidos</p></a>
+					</li>
+					<li>
+						<a href="#bottoms" class="side-bar-link"><p>Tops</p></a>
+					</li>
+				</ul>
+				<hr />
+				<div class="side-bar-social">
+					<a href="#">
+						<img
+							src="./assets/icons/facebook-logo-fill-pink.svg"
+							class="social-link"
+							alt="Facebook"
+						/>
+					</a>
+					<a href="#">
+						<img
+							src="./assets/icons/instagram-logo-fill-pink.svg"
+							class="social-link"
+							alt="Instagram"
+						/>
+					</a>
+				</div>
+			</div>
+		</nav>
+
 		<section class="gallery-container">
 			<h1 class="section-title">Lorem ipsum dolor sit</h1>
 			<p class="section-subtitle">
@@ -178,5 +239,58 @@
 			</div>
 			<a href="/"><button class="btn">volver</button></a>
 		</section>
+
+		<footer class="footer">
+			<div class="footer-content">
+				<div class="footer-column">
+					<img class="footer-logo" src="./assets/icons/logo-name-white.png" />
+					<p class="footer-description">
+						Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio,
+						ducimus dolore quae nesciunt magni assumenda qui.
+					</p>
+				</div>
+				<div class="footer-column">
+					<h3>Explorar</h3>
+					<ul class="footer-links">
+						<li><a href="./index.html">Inicio</a></li>
+						<li><a href="./index.html">Sobre mí</a></li>
+						<li><a href="./index.html">Vestidos</a></li>
+						<li><a href="./index.html">Tops</a></li>
+					</ul>
+				</div>
+				<div class="footer-column">
+					<h3>Contáctame</h3>
+					<div class="social-media">
+						<a href="https://facebook.com" target="_blank">
+							<img
+								src="./assets/icons/facebook-svgrepo-com.svg"
+								class="social-link"
+								alt="Facebook"
+							/>
+						</a>
+						<a href="https://instagram.com" target="_blank">
+							<img
+								src="./assets/icons/instagram-svgrepo-com.svg"
+								class="social-link"
+								alt="Instagram"
+							/>
+						</a>
+					</div>
+					<p class="contact-info">
+						Email: <a href="mailto:">example@synthocean.com</a><br />
+						Móvil: <a href="tel:+1234567890">+53 (564) 567-89</a>
+					</p>
+				</div>
+				<div class="footer-bottom">
+					<a href="https://SynthOcean.com" target="_blank">
+						<p>Powered by <span class="bold">SynthOcean</span>.</p>
+						<img src="./assets/icons/so-white-color.svg" class="so-logo"
+					/></a>
+
+					<p class="copyright">© 2025 All rights reserved.</p>
+				</div>
+			</div>
+		</footer>
+		<script src="js/main.js"></script>
 	</body>
 </html>
