Added pill slider style to tabs

--- a/gallery.html
+++ b/gallery.html
@@ -99,139 +99,69 @@
 				<div class="tab-contents">
 					<div class="tab-content">
 						<div class="gallery-grid">
-							<div class="gallery-item">
+							<div class="gallery-item fade-in">
 								<img
 									src="./assets/dresses/preview_1.png"
 									class="gallery-image"
 								/>
-								<div class="card-content">
-									<h3 class="item-title">Vestido 1</h3>
-									<p class="item-price">$200.00</p>
-									<a href="/producto/vestido-1"
-										><button class="btn">Ver Detalles</button></a
-									>
-								</div>
 							</div>
-							<div class="gallery-item">
+							<div class="gallery-item fade-in">
 								<img
 									src="./assets/dresses/preview_2.png"
 									class="gallery-image"
 								/>
-								<div class="card-content">
-									<h3 class="item-title">Vestido 2</h3>
-									<p class="item-price">$200.00</p>
-									<a href="/producto/vestido-2"
-										><button class="btn">Ver Detalles</button></a
-									>
-								</div>
 							</div>
-							<div class="gallery-item">
+							<div class="gallery-item fade-in">
 								<img
 									src="./assets/dresses/preview_3.png"
 									class="gallery-image"
 								/>
-								<div class="card-content">
-									<h3 class="item-title">Vestido 3</h3>
-									<p class="item-price">$200.00</p>
-									<a href="/producto/vestido-3"
-										><button class="btn">Ver Detalles</button></a
-									>
-								</div>
 							</div>
-							<div class="gallery-item">
+							<div class="gallery-item fade-in">
 								<img
 									src="./assets/dresses/preview_4.png"
 									class="gallery-image"
 								/>
-								<div class="card-content">
-									<h3 class="item-title">Vestido 4</h3>
-									<p class="item-price">$200.00</p>
-									<a href="/producto/vestido-4"
-										><button class="btn">Ver Detalles</button></a
-									>
-								</div>
 							</div>
-							<div class="gallery-item">
+							<div class="gallery-item fade-in">
 								<img
 									src="./assets/dresses/preview_5.png"
 									class="gallery-image"
 								/>
-								<div class="card-content">
-									<h3 class="item-title">Vestido 5</h3>
-									<p class="item-price">$200.00</p>
-									<a href="/producto/vestido-5"
-										><button class="btn">Ver Detalles</button></a
-									>
-								</div>
 							</div>
 						</div>
 					</div>
 					<div class="tab-content">
 						<div class="gallery-grid">
-							<div class="gallery-item">
+							<div class="gallery-item fade-in">
 								<img
 									src="./assets/dresses/preview_6.png"
 									class="gallery-image"
 								/>
-								<div class="card-content">
-									<h3 class="item-title">Top 1</h3>
-									<p class="item-price">$200.00</p>
-									<a href="/producto/top-1"
-										><button class="btn">Ver Detalles</button></a
-									>
-								</div>
 							</div>
-							<div class="gallery-item">
+							<div class="gallery-item fade-in">
 								<img
 									src="./assets/dresses/preview_7.png"
 									class="gallery-image"
 								/>
-								<div class="card-content">
-									<h3 class="item-title">Top 2</h3>
-									<p class="item-price">$200.00</p>
-									<a href="/producto/top-2"
-										><button class="btn">Ver Detalles</button></a
-									>
-								</div>
 							</div>
-							<div class="gallery-item">
+							<div class="gallery-item fade-in">
 								<img
 									src="./assets/dresses/preview_8.png"
 									class="gallery-image"
 								/>
-								<div class="card-content">
-									<h3 class="item-title">Top 3</h3>
-									<p class="item-price">$200.00</p>
-									<a href="/producto/top-3"
-										><button class="btn">Ver Detalles</button></a
-									>
-								</div>
 							</div>
-							<div class="gallery-item">
+							<div class="gallery-item fade-in">
 								<img
 									src="./assets/dresses/preview_9.png"
 									class="gallery-image"
 								/>
-								<div class="card-content">
-									<h3 class="item-title">Top 4</h3>
-									<p class="item-price">$200.00</p>
-									<a href="/producto/top-4"
-										><button class="btn">Ver Detalles</button></a
-									>
-								</div>
 							</div>
-							<div class="gallery-item">
+							<div class="gallery-item fade-in">
 								<img
 									src="./assets/dresses/preview_10.png"
 									class="gallery-image"
 								/>
-								<div class="card-content">
-									<h3 class="item-title">Top 5</h3>
-									<p class="item-price">$200.00</p>
-									<a href="/producto/top-5"
-										><button class="btn">Ver Detalles</button></a
-									>
-								</div>
 							</div>
 						</div>
 					</div>
