Added names to gallery items

--- a/gallery.html
+++ b/gallery.html
@@ -104,30 +104,35 @@
 									src="./assets/dresses/preview_1.png"
 									class="gallery-image"
 								/>
+								<p class="gallery-item-name">Vestido Número Uno</p>
 							</div>
 							<div class="gallery-item fade-in">
 								<img
 									src="./assets/dresses/preview_2.png"
 									class="gallery-image"
 								/>
+								<p class="gallery-item-name">Vestido Número Dos</p>
 							</div>
 							<div class="gallery-item fade-in">
 								<img
 									src="./assets/dresses/preview_3.png"
 									class="gallery-image"
 								/>
+								<p class="gallery-item-name">Vestido Número Tres</p>
 							</div>
 							<div class="gallery-item fade-in">
 								<img
 									src="./assets/dresses/preview_4.png"
 									class="gallery-image"
 								/>
+								<p class="gallery-item-name">Vestido Número Cuatro</p>
 							</div>
 							<div class="gallery-item fade-in">
 								<img
 									src="./assets/dresses/preview_5.png"
 									class="gallery-image"
 								/>
+								<p class="gallery-item-name">Vestido Número Cinco</p>
 							</div>
 						</div>
 					</div>
@@ -138,30 +143,35 @@
 									src="./assets/dresses/preview_6.png"
 									class="gallery-image"
 								/>
+								<p class="gallery-item-name">Top Número Uno</p>
 							</div>
 							<div class="gallery-item fade-in">
 								<img
 									src="./assets/dresses/preview_7.png"
 									class="gallery-image"
 								/>
+								<p class="gallery-item-name">Top Número Dos</p>
 							</div>
 							<div class="gallery-item fade-in">
 								<img
 									src="./assets/dresses/preview_8.png"
 									class="gallery-image"
 								/>
+								<p class="gallery-item-name">Top Número Tres</p>
 							</div>
 							<div class="gallery-item fade-in">
 								<img
 									src="./assets/dresses/preview_9.png"
 									class="gallery-image"
 								/>
+								<p class="gallery-item-name">Top Número Cuatro</p>
 							</div>
 							<div class="gallery-item fade-in">
 								<img
 									src="./assets/dresses/preview_10.png"
 									class="gallery-image"
 								/>
+								<p class="gallery-item-name">Top Número Cinco</p>
 							</div>
 						</div>
 					</div>
